⚡️ 迁移到单Activity多Fragment架构

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
         Book Details
     </string>
     <string name="add_book">添加书籍</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">
+        Hello
+        blank
+        fragment
+    </string>
 </resources>
